--- a/src/app/components/login-layout/login-layout.component.html
+++ b/src/app/components/login-layout/login-layout.component.html
@@ -1,6 +1,6 @@
 <main>
     <section>
-        <img/>
+        <img src="/assets/img/icone-login.png"/>
         <h2></h2>
         <button></button>
         <div>
@@ -10,6 +10,6 @@
     </section>
     <section>
         <h2>App Login</h2>
-        <img/>
+        <img src="/assets/img/imagem_senha.jpg"/>
     </section>
 </main>
