--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,1 +1,10 @@
-<app-login-layout></app-login-layout>
+<app-login-layout
+    title="Faça login em sua conta"
+    btn1="Conecte-se"
+    btn2="Inscreva-se agora"
+>
+    <form> 
+        
+    </form>
+
+</app-login-layout>
